Fixed spacing around the icon

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ h2 {
 
 .fa-brands {
   padding-left: 5px;
-  padding-top: 8px;
+  padding-top: 10px;
 }
 
 @media (max-width: 600px) {
